[package]
name = "code_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
aptos-sdk = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
rand = "0.8.4"
yew = "0.20.0"
wasm-bindgen = "0.2.78"
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies.web-sys]
version = "0.3"
features = ["Window", "Document", "HtmlElement"]
